<resources>
    <string name="app_name">Calculadora de Cerveja</string>
    <string name="litros">litros</string>
    <string name="imagem_de_cerveja">Imagem de cerveja</string>
    <string name="valor_r">Valor(R$)</string>
    <string name="adicionar">Adicionar</string>
    <string name="lista_de_cervejas">LISTA DE CERVEJAS</string>
    <string name="setings" translatable="false">setings</string>
    <string name="valor_por_ml_s">Valor por ml\'s:</string>
    <string name="marca">Marca</string>
    <string name="valor">Valor</string>
    <string name="ml_s">mls</string>
    <string name="local_para_inserir_a_marca_da_cerveja">Local para inserir a marca da cerveja</string>
    <string name="locar_para_inserir_a_quantidade_de_litros">Locar para inserir a quantidade de litros</string>
    <string name="local_para_inserir_o_valor_da_cerveja">Local para inserir o valor da cerveja</string>
    <string name="bot_o_para_adicionar_a_cerveja_a_lista">Botão para adicionar a cerveja a lista</string>
    <string name="bot_o_para_ir_tela_da_lista_de_cervejas">Botão para ir á tela da lista de cervejas</string>
    <string name="card_com_as_informa_es_da_cerveja">Card com as informações da cerveja</string>
    <string name="nome_da_cerveja">nome da cerveja</string>
    <string name="mls_da_cerveja">mls da cerveja</string>
    <string name="valor_da_cerveja">valor da cerveja</string>
    <string name="valor_da_cerveja_por_ml">Valor da cerveja por ml</string>

</resources>
