<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/secondaryColor">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="356dp"
        android:layout_height="160dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="31dp"
        android:contentDescription="@string/imagem_de_cerveja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cerveja" />

    <com.google.android.material.textfield.TextInputLayout
        android:contentDescription="@string/local_para_inserir_a_marca_da_cerveja"
        android:id="@+id/marcaInput"
        android:layout_width="275dp"
        android:layout_height="49dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/valorInput"
        app:layout_constraintEnd_toStartOf="@+id/litrosInput"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/marcaText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/marca" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:contentDescription="@string/locar_para_inserir_a_quantidade_de_litros"
        android:id="@+id/litrosInput"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/marcaInput"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/litrosText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/litros"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:contentDescription="@string/local_para_inserir_o_valor_da_cerveja"
        android:id="@+id/valorInput"
        android:layout_width="244dp"
        android:layout_height="50dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/btnAdicionar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marcaInput"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/valorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/valor_r"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:contentDescription="@string/bot_o_para_adicionar_a_cerveja_a_lista"
        android:id="@+id/btnAdicionar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:text="@string/adicionar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/valorInput"
        app:layout_constraintTop_toBottomOf="@+id/litrosInput"
        tools:ignore="OnClick"
        android:background="@color/colorPrimary"/>

    <Button
        android:contentDescription="@string/bot_o_para_ir_tela_da_lista_de_cervejas"
        android:id="@+id/btnList"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="24dp"
        android:text="@string/lista_de_cervejas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valorInput"
        tools:ignore="MissingConstraints"
        android:background="@color/colorPrimary"/>

</androidx.constraintlayout.widget.ConstraintLayout>