<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView

        android:contentDescription="@string/card_com_as_informa_es_da_cerveja"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="10dp"
        app:cardCornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:padding="10dp">

            <TextView
                android:contentDescription="@string/marca"
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/marca"
                android:textSize="22sp" />

            <TextView
                android:contentDescription="@string/ml_s"
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ml_s"
                android:textAlignment="center"
                android:textSize="22sp" />

            <TextView
                android:contentDescription="@string/valor"
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/valor"
                android:textSize="22sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="45dp">

            <TextView
                android:contentDescription="@string/nome_da_cerveja"
                android:id="@+id/marcaCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="TextMarca"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/secondaryTextColor"/>

            <TextView
                android:contentDescription="@string/mls_da_cerveja"
                android:id="@+id/mlsCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TextMl's"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/secondaryTextColor"/>
            />

            <TextView
                android:contentDescription="@string/valor_da_cerveja"
                android:id="@+id/valorCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="TextValor"
                android:textColor="@color/secondaryTextColor"/>

            android:textAlignment="center"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="8dp">

            <TextView
                android:contentDescription="@string/valor_da_cerveja_por_ml"
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/valor_por_ml_s"
                android:textSize="22sp" />

            <TextView
                android:contentDescription="@string/valor_da_cerveja_por_ml"
                android:id="@+id/valorMl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="TextView"
                android:textColor="@color/secondaryTextColor"
            android:textSize="22sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>


